Creating error namespace for better organization.
