# core/controller/auth.go
@@ -7,7 +7,6 @@ import (
 	"agenda-kaki-go/core/handler"
 	"agenda-kaki-go/core/service"
 	"errors"
-	"log"
 
 	"github.com/gofiber/fiber/v2"
 	"github.com/shareed2k/goth_fiber"
@@ -28,7 +27,19 @@ func Auth(Gorm *handler.Gorm) *auth_controller {
 	}
 }
 
-// Custom extension method to login an user
+// Login just logs an user in case the password is correct
+//
+//	@Summary		Login
+//	@Description	Log in an user
+//	@Tags			Auth
+//	@Accept			json
+//	@Produce		json
+//	@Security		ApiKeyAuth
+//	@Param			user	body	DTO.LoginUser	true	"User"
+//	@Success		200
+//	@Failure		404	{object}	DTO.ErrorResponse
+//	@Failure		401	{object}	DTO.ErrorResponse
+//	@Router			/auth/login [post]
 func (cc *auth_controller) Login(c *fiber.Ctx) error {
 	cc.SetAction(c)
 	body := c.Locals(namespace.GeneralKey.Model).(*model.User)
@@ -47,7 +58,6 @@ func (cc *auth_controller) Login(c *fiber.Ctx) error {
 	if err != nil {
 		cc.AutoReqActions.ActionFailed(500, err)
 	}
-	log.Println("User logged in: ", userDatabase.Email)
 	c.Response().Header.Set("Authorization", token)
 
 	return nil
